<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="bill_amount"></string>

    <string name="tip_percent_label">Percent:</string>
    <string name="tip_percent">15%</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="tip_amount_label">Percent:</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
    <string name="input_value">" "</string>


</resources>