<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billAmountLAbel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="23dp"
        android:text="@string/bill_amount_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/billAmountEditText"
        app:layout_constraintEnd_toStartOf="@+id/billAmountEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="60dp"
        android:text="@string/tip_percent_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/percentTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountLAbel" />

    <TextView
        android:id="@+id/tipLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/tip_amount_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:text="@string/total_amount_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tipLable"
        app:layout_constraintTop_toBottomOf="@+id/tipLable" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/input_value"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/percentUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLAbel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="enter amount" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tip_amount"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

    <Button
        android:id="@+id/percentDown"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="#D8D8D8"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/decrease"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/text_size"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/percentUp"
        app:layout_constraintStart_toEndOf="@+id/percentTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#CACACA" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="63dp"
        android:text="@string/tip_percent"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/percentDown"
        app:layout_constraintStart_toEndOf="@+id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/total_amount"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/tipTextView"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <Button
        android:id="@+id/percentUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FFD8D8D8"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/increase"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/text_size"
        app:cornerRadius="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentDown" />
</androidx.constraintlayout.widget.ConstraintLayout>